Fixing alignment of labels for Identify

--- a/fid-web/src/main/webapp/style/pageStyles/asset.css
+++ b/fid-web/src/main/webapp/style/pageStyles/asset.css
@@ -78,6 +78,10 @@
 	padding-top: 5px;
 }
 
+.fullForm .fieldHolder, .fullForm .label {
+    line-height: 22px;
+}
+
 .assetFormGroup h2{
 	margin-bottom: 5px;
 	font-size: 1.1em;
@@ -311,4 +315,13 @@
 	background-color: #F8F8F8;
 	margin: 5px 0;
 	padding: 5px 0;
+}
+
+.uploadFileForm {
+	padding: 20px 10px 0 10px;
+	background-color: #F5FBFF;
+	height: 80px;
+}			
+.uploadMessage{
+	margin-bottom: 5px;
 }
